--- a/about.html
+++ b/about.html
@@ -15,15 +15,15 @@
     <header class="header">
         <div class="header_inner">
            <h1 class="header_title header-title">
-            <a href="../portfolio/index.html">
+            <a href="./index.html">
                 <img src="picture/logo.png" alt="桜と私" width="100">
              </a>
            </h1>
            <nav class="header_nav nav" id="js-nav">
             <ul class="nav_items nav-items">
-               <li class="nav-tiems_item"><a href="../portfolio/about.html">About</a></li>
-               <li class="nav-tiems_item"><a href="../portfolio/work.html">Work</a></li>
-               <li class="nav-tiems_item"><a href="../portfolio/contact.html">Contact</a></li>
+               <li class="nav-tiems_item"><a href="./about.html">About</a></li>
+               <li class="nav-tiems_item"><a href="./work.html">Work</a></li>
+               <li class="nav-tiems_item"><a href="./contact.html">Contact</a></li>
             </ul>
          </nav>
            <button class="header_hamburger hamburger" id="js-hamburger" >
