--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
    <header class="header">
       <div class="header_inner">
          <h1 class="header_title header-title">
-            <a href="../portfolio/index.html">
+            <a href="./index.html">
                <img src="picture/logo.png" alt="" width="100">
             </a>
          </h1>
          <nav class="header_nav nav" id="js-nav">
             <ul class="nav_items nav-items">
-               <li class="nav-tiems_item"><a href="../portfolio/about.html">About</a></li>
-               <li class="nav-tiems_item"><a href="../portfolio/work.html">Work</a></li>
-               <li class="nav-tiems_item"><a href="../portfolio/contact.html">Contact</a></li>
+               <li class="nav-tiems_item"><a href="./about.html">About</a></li>
+               <li class="nav-tiems_item"><a href="./work.html">Work</a></li>
+               <li class="nav-tiems_item"><a href="./contact.html">Contact</a></li>
             </ul>
          </nav>
          <button class="header_hamburger hamburger" id="js-hamburger" >
@@ -77,13 +77,13 @@
      </section>
      <section class="menu">  
         <section class="about">
-         <a href="../portfolio/about.html">
+         <a href="./about.html">
             <img src="picture/gallery6.JPG" alt="about" width="100">
             <h2>ABOUT</h2>
          </a>
         </section>
         <section class="work">
-         <a href="../portfolio/work.html">
+         <a href="./work.html">
             <img src="picture/work.JPG" alt="work" width="100">
             <h2>WORK</h2>
          </a>
