--- a/work.html
+++ b/work.html
@@ -15,16 +15,16 @@
     <header class="header">
         <div class="header_inner">
            <h1 class="header_title header-title">
-            <a href="../portfolio/index.html">
+            <a href="./index.html">
                 <img src="picture/logo.png" alt="" width="100">
              </a>
            </h1>
            <nav class="header_nav nav" id="js-nav">
             <ul class="nav_items nav-items">
-               <li class="nav-tiems_item"><a href="../portfolio/about.html">About</a></li>
-               <li class="nav-tiems_item"><a href="../portfolio/work.html">Work</a></li>
-               <li class="nav-tiems_item"><a href="../portfolio/contact.html">Contact</a></li>
-            </ul>
+                <li class="nav-tiems_item"><a href="./about.html">About</a></li>
+                <li class="nav-tiems_item"><a href="./work.html">Work</a></li>
+                <li class="nav-tiems_item"><a href="./contact.html">Contact</a></li>
+             </ul>
          </nav>
            <button class="header_hamburger hamburger" id="js-hamburger" >
               <span></span>
@@ -51,7 +51,7 @@
                 <ul class="list">
                     <li class="web" data-category="web">
                         <div class="sample_box">
-                        <a href="../portfolio/portfolio.html">
+                        <a href="./portfolio.html">
                         <img src="picture/portfolio_1.png" alt="portfolio_1" width="100">
                         </a>
                         </div>
@@ -62,7 +62,7 @@
                     </li>
                     <li class="web" data-category="web">
                         <div class="sample_box">
-                        <a href="../portfolio/mito.html">
+                        <a href="./mito.html">
                         <img src="picture/mito.png" alt="mito" width="100">
                         </a>
                         </div>
@@ -73,7 +73,7 @@
                     </li>
                     <li class="web" data-category="web">
                         <div class="sample_box">
-                        <a href="../portfolio/deafpeace.html">
+                        <a href="./deafpeace.html">
                         <img src="picture/peace.png" alt="peace" width="100">
                         </a>
                         </div>
@@ -84,7 +84,7 @@
                     </li>
                     <li class="web" data-category="web">
                         <div class="sample_box">
-                        <a href="../portfolio/tabesugu.html">
+                        <a href="./tabesugu.html">
                         <img src="picture/tabesugu.png" alt="tabesugu" width="100">
                         </a>
                         </div>
@@ -95,7 +95,7 @@
                     </li>
                     <li class="web" data-category="web">
                         <div class="sample_box">
-                        <a href="../portfolio/yume.html">
+                        <a href="./yume.html">
                         <img src="picture/portfolio_2.png" alt="portfolio_2" width="100">
                         </a>
                         </div>
@@ -106,7 +106,7 @@
                     </li>
                     <li class="ui" data-category="ui">
                         <div class="sample_box">
-                        <a href="../portfolio/ui.html">
+                        <a href="./ui.html">
                         <img src="picture/Gradation.png" alt="Gradation" width="100">
                         </a>
                         </div>
@@ -117,7 +117,7 @@
                     </li>
                     <li class="movie" data-category="movie">
                         <div class="sample_box">
-                        <a href="../portfolio/tokyo.html">
+                        <a href="./tokyo.html">
                         <img src="picture/tokyo.JPG" alt="tokyo" width="100">
                         </a>
                         </div>
@@ -128,7 +128,7 @@
                     </li>
                     <li class="movie" data-category="movie">
                         <div class="sample_box">
-                        <a href="../portfolio/mito_movie.html">
+                        <a href="./mito_movie.html">
                         <img src="picture/mito_movie.jpg" alt="mito_movie" width="100">
                         </a>
                         </div>
