--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <script src="./javascript/jquery-3.7.0.min.js"></script>
     <script src="./javascript/main.js" defer></script>
+    <link href="./picture/favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
    <header class="header">
