--- a/ui.html
+++ b/ui.html
@@ -61,7 +61,7 @@
         </tr>
         <tr>
             <td class="td-1">PDF</td>
-            <td class="td-2"><a href="./picture/ui_contents.pdf">内容はこちら</a></td>
+            <td class="td-2"><a href="./picture/ui_contents.pdf">詳細はこちら</a></td>
         </tr>
     </table>
 </section>
