--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="./css/about.css">
 <script src="./javascript/jquery-3.7.0.min.js"></script>
 <script src="./javascript/main.js" defer></script>
+<link href="./picture/favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
     <header class="header">
@@ -46,7 +47,7 @@
 <div class="about_text">
 <p>2000年生まれ、茨城県出身。</p>
 <p>趣味は音楽を聞くこと、韓国ドラマ、カメラ、動画編集など多趣味な人間です。</p>
-<p>デザイン知識が全くなかったため、2022年1月～6月の半年間Webデザインスクールに通い、中心に学びました。</p>
+<p>デザイン知識が全くなかったため、2022年1月～6月の半年間Webデザインスクールに通い、HTMLとCSSを中心に学びました。</p>
 <p>現在は、JavascriptとUIUXの勉強中です。</p>
 </div>
 </div>
