--- a/mito.html
+++ b/mito.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="./css/mito.css">
         <script src="./javascript/jquery-3.7.0.min.js"></script>
         <script src="./javascript/main.js" defer></script>
+        <link href="./picture/favicon.ico" rel="icon" type="image/x-icon">
     </head>
     <body>
         <header class="header">
@@ -46,10 +47,9 @@
                 </tr>
                 <tr>
                     <td class="design">デザイン</td>
-                    <td class="td-2">余白を意識して、シンプルですっきりとしたデザインにしました。<br>
-                        TOPページに表示されている動画は、友達の協力で水戸の素材を集めCapcutというアプリで編集<br>
-                        しました。<br>
-                        一部の画像は水戸市観光の公式サイトでフリー素材として公開されており、その中から厳選しました。<br></td>
+                    <td class="td-2"><p>余白を意識して、シンプルですっきりとしたデザインにしました。
+                        TOPページに表示されている動画は、友達の協力で水戸の素材を集めCapcutというアプリで編集
+                        一部の画像は水戸市観光の公式サイトでフリー素材として公開されており、その中から厳選しました。</p></td>
                 </tr>
                 <tr>
                     <td class="td-1">制作範囲</td>
