--- a/tabesugu.html
+++ b/tabesugu.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="./css/tabesugu.css">
         <script src="./javascript/jquery-3.7.0.min.js"></script>
         <script src="./javascript/main.js" defer></script>
+        <link href="./picture/favicon.ico" rel="icon" type="image/x-icon">
     </head>
     <body>
         <header class="header">
@@ -46,9 +47,9 @@
                 </tr>
                 <tr>
                     <td class="design">デザイン</td>
-                    <td class="td-2">親近感があり、野菜のイメージカラーである緑色を統一したデザインにしました。<br>
-                    お得なセットの背景デザインは、ピーマンの断面をイメージしました。<br>
-                    写真等は、Adobeの無料素材の中からイメージに合った写真を選びました。
+                    <td class="td-2"><p>親近感があり、野菜のイメージカラーである緑色を統一したデザインにしました。
+                    お得なセットの背景デザインは、ピーマンの断面をイメージしました。
+                    写真等は、Adobeの無料素材の中からイメージに合った写真を選びました。</p>
                     </td>
                 </tr>
                 <tr>
