--- a/yume.html
+++ b/yume.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="./css/yume.css">
         <script src="./javascript/jquery-3.7.0.min.js"></script>
         <script src="./javascript/main.js" defer></script>
+        <link href="./picture/favicon.ico" rel="icon" type="image/x-icon">
     </head>
     <body>
         <header class="header">
@@ -46,10 +47,10 @@
                 </tr>
                 <tr>
                     <td class="design">デザイン</td>
-                    <td class="td-2">トップメッセージの「夢は無限大」をイメージし、<br>
-                    ゆめかわいい世界観を意識してデザインしました。<br>
-                    イラストはアイビスペイントを利用し、初めてのＷＥＢ制作でシンプルな仕上がりになっています。
-                    </td>
+                    <td class="td-2"><p>トップメッセージの「夢は無限大」をイメージし、
+                    ゆめかわいい世界観を意識してデザインしました。
+                    イラストはアイビスペイントを利用し、初めてのＷＥＢ制作でシンプルな仕上がりになっています。</p>
+                    </td>>  
                 </tr>
                 <tr>
                     <td class="td-1">制作範囲</td>
