--- a/deafpeace.html
+++ b/deafpeace.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="./css/deafpeace.css">
         <script src="./javascript/jquery-3.7.0.min.js"></script>
         <script src="./javascript/main.js" defer></script>
+        <link href="./picture/favicon.ico" rel="icon" type="image/x-icon">
     </head>
     <body>
         <header class="header">
@@ -42,23 +43,23 @@
             <table  class="table_content">
                 <tr>
                     <td class="defe">目的</td>
-                    <td class="td-2">卒業制作で「聴覚障がい者について」の架空サイトを制作しました。<br>
-                        障がいという言葉を聞くと暗いイメージに囚われやすいと思います。<br>
-                        このサイトを通して、真面目な部分だけではなくユーモアな部分も知っていただけたらいいなと思い、<br>
-                        このテーマにしました。
+                    <td class="td-2"><p>卒業制作で「聴覚障がい者について」の架空サイトを制作しました。
+                        障がいという言葉を聞くと暗いイメージに囚われやすいと思います。
+                        このサイトを通して、真面目な部分だけではなくユーモアな部分も知っていただけたらいいなと思い、
+                        このテーマにしました。</p>
                     </td>
                 </tr>
                 <tr>
                     <td class="design">デザイン</td>
-                    <td class="td-3">このサイトの目的である真面目＋ユーモアを表現したデザインにしたかったため、知性の水色と活発な<br>
-                        黄色の2色をイメージカラーにしました。<br>
-                        ロゴマークは、聴覚障がい者にとって魔法の用具である「補聴器」と「人工内耳」です。人工内耳の認<br>
-                        知度は、補聴器の認知度に比べて低い傾向があります。<br>
-                        そのため、補聴器だけではなく人工内耳の存在もアピールし、ユーモアのあるロゴマークにしました。<br>
-                        そして、「困ったこと」「あったらいいな、こんなもの」「ろう者あるある」は関連の記事やYouTubeなど<br>
-                        で情報収集しました。<br>
-                        他には、母校・友達の協力で中学生から大学生の聴覚障がい者対象でアンケートを取り、リアルな声<br>
-                        を基にしてイラストでまとめてみました。</td>
+                    <td class="td-3"><p>このサイトの目的である真面目＋ユーモアを表現したデザインにしたかったため、知性の水色と活発な
+                        黄色の2色をイメージカラーにしました。
+                        ロゴマークは、聴覚障がい者にとって魔法の用具である「補聴器」と「人工内耳」です。人工内耳の認
+                        知度は、補聴器の認知度に比べて低い傾向があります。
+                        そのため、補聴器だけではなく人工内耳の存在もアピールし、ユーモアのあるロゴマークにしました。
+                        そして、「困ったこと」「あったらいいな、こんなもの」「ろう者あるある」は関連の記事やYouTubeなど
+                        で情報収集しました。
+                        他には、母校・友達の協力で中学生から大学生の聴覚障がい者対象でアンケートを取り、リアルな声
+                        を基にしてイラストでまとめてみました。</p>
                 </tr>
                 <tr>
                     <td class="td-1">制作範囲</td>
