--- a/ui.html
+++ b/ui.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="./css/ui.css">
         <script src="./javascript/jquery-3.7.0.min.js"></script>
         <script src="./javascript/main.js" defer></script>
+        <link href="./picture/favicon.ico" rel="icon" type="image/x-icon">
     </head>
     <body>
         <header class="header">
@@ -42,13 +43,13 @@
     <table  class="table_content">
         <tr>
             <td class="movie">目的</td>
-            <td class="td-2">2年前にコロナ禍の中で茨城県から上京し、知らない環境で知り合いも一人もいなかったためとても不安<br>
-                でした。<br>
-                コロナの影響で行動制限され、人と簡単に会うこともできず孤独を感じたこともありました。<br>
-                行動制限が解除され東京の観光名所には、たくさんの外国人観光客が溢れていて当たり前だった日常に<br>
-                戻りかけていると実感しました。<br>
-                街中を歩くたびに、当たり前だった日常・何気ない日常の大切さに気付き、もう二度と来ない瞬間をカメラ<br>
-                に残しました。
+            <td class="td-2"><p>2年前にコロナ禍の中で茨城県から上京し、知らない環境で知り合いも一人もいなかったためとても不安
+                でした。
+                コロナの影響で行動制限され、人と簡単に会うこともできず孤独を感じたこともありました。
+                行動制限が解除され東京の観光名所には、たくさんの外国人観光客が溢れていて当たり前だった日常に
+                戻りかけていると実感しました。
+                街中を歩くたびに、当たり前だった日常・何気ない日常の大切さに気付き、もう二度と来ない瞬間をカメラ
+                に残しました。</p>
             </td>
         </tr>
         <tr>
