--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
                         </a>
                         </div>
                         <div>
-                            <h2>portfolio</h2>
+                            <h2>Portfolio</h2>
                             <p>デザイン/コーディング</p>
                         </div>
                     </li>
@@ -101,7 +101,7 @@
                         </a>
                         </div>
                         <div>
-                            <h2>portfolio(課題/架空サイト)</h2>
+                            <h2>Portfolio(課題/架空サイト)</h2>
                             <p>デザイン/コーディング</p>
                         </div>
                     </li>
