--- a/mito.html
+++ b/mito.html
@@ -69,7 +69,7 @@
                 </tr>
                 <tr>
                     <td class="td-1">サイト</td>
-                    <td class="td-2"><a href="https://mito21.netlify.app/"  target=”right”>https://mito21.netlify.app</a></td>
+                    <td class="td-2"><a href="https://blueberry-3689.github.io/mito/"  target=”right”>https://blueberry-3689.github.io/mito/</a></td>
                 </tr>
             </table>
         </section>
