--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                 </tr>
                 <tr>
                     <td class="td-1">使用言語</td>
-                    <td class="td-2">HTML/CSS/Javascript></td>
+                    <td class="td-2">HTML/CSS/Javascript</td>
                 </tr>
             </table>
         </section>
