--- a/yume.html
+++ b/yume.html
@@ -43,14 +43,14 @@
             <table  class="table_content">
                 <tr>
                     <td class="td-1">目的</td>
-                    <td class="td-2">課題。</td>
+                    <td class="td-2">課題</td>
                 </tr>
                 <tr>
                     <td class="design">デザイン</td>
                     <td class="td-2"><p>トップメッセージの「夢は無限大」をイメージし、
                     ゆめかわいい世界観を意識してデザインしました。
                     イラストはアイビスペイントを利用し、初めてのＷＥＢ制作でシンプルな仕上がりになっています。</p>
-                    </td>>  
+                    </td>
                 </tr>
                 <tr>
                     <td class="td-1">制作範囲</td>
