--- a/ui.html
+++ b/ui.html
@@ -43,13 +43,14 @@
     <table  class="table_content">
         <tr>
             <td class="movie">目的</td>
-            <td class="td-2"><p>2年前にコロナ禍の中で茨城県から上京し、知らない環境で知り合いも一人もいなかったためとても不安
-                でした。
-                コロナの影響で行動制限され、人と簡単に会うこともできず孤独を感じたこともありました。
-                行動制限が解除され東京の観光名所には、たくさんの外国人観光客が溢れていて当たり前だった日常に
-                戻りかけていると実感しました。
-                街中を歩くたびに、当たり前だった日常・何気ない日常の大切さに気付き、もう二度と来ない瞬間をカメラ
-                に残しました。</p>
+            <td class="td-2"><p>今回のキーワードである「D&I」。
+                「D&I」とは、ダイバーシティ(多様性)とインクルージョン(包括性)を組み合わせた造語。
+                人種や性別、年齢、障がい、価値観などの人の内面、外観の違いを互いに認め尊重し合うことです。
+                多様な性、多様な人種、多様な年齢、多様な個性、多様な価値観などを多種多様な生き方があります。
+                海外ファッションでは「ダイバーシティ＆インクルージョン」を取り入れたファッションが徐々に浸透されているが、
+                アプリ面ではアクセシビリティ対応や不便な点もあります。
+                そのため、Gradationを通して誰もが自由に楽しめるファッションを広めたいです。
+            </p>
             </td>
         </tr>
         <tr>
