--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
 聞こえ方は十人十色のように、それぞれの聞こえ方があります。<br class="mb_1"><br class="mb_2"><br class="sp"><br class="pc">
 私の場合は、両耳で110㏈以上あり聴覚レベルで<br class="sp">一番重い<br class="pc">
 重度難聴のレベルになります。<br class="sp"><br class="pc">
-ドライヤーで耳元を当てたり、家の上に飛行機が<br class="sp">飛んでいたり、<br class="pc">
+ドライヤーを耳元に当てたり、家の上に飛行機が<br class="sp">飛んでいたり、<br class="pc">
 車のクラクション音でも全く聞こえません。<br class="mb_1"><br class="mb_2"><br class="sp"><br class="pc">
 しかし、右耳に人工内耳を装用した場合は20～30㏈に<br class="pc">下がります。<br class="sp"><br class="pc">
 左耳は全く聞こえないため、右耳で情報を把握していますが<br class="pc">完璧に聞き取ることは難しいです。<br class="mb_2"><br class="sp"><br class="pc">
