--- a/deafpeace.html
+++ b/deafpeace.html
@@ -53,13 +53,11 @@
                     <td class="design">デザイン</td>
                     <td class="td-3"><p>このサイトの目的である真面目＋ユーモアを表現したデザインにしたかったため、知性の水色と活発な
                         黄色の2色をイメージカラーにしました。
-                        ロゴマークは、聴覚障がい者にとって魔法の用具である「補聴器」と「人工内耳」です。人工内耳の認
-                        知度は、補聴器の認知度に比べて低い傾向があります。
+                        ロゴマークは、聴覚障がい者にとって魔法の用具である「補聴器」と「人工内耳」です。人工内耳の認知度は、補聴器の認知度に比べて低い傾向があります。
                         そのため、補聴器だけではなく人工内耳の存在もアピールし、ユーモアのあるロゴマークにしました。
                         そして、「困ったこと」「あったらいいな、こんなもの」「ろう者あるある」は関連の記事やYouTubeなど
                         で情報収集しました。
-                        他には、母校・友達の協力で中学生から大学生の聴覚障がい者対象でアンケートを取り、リアルな声
-                        を基にしてイラストでまとめてみました。</p>
+                        他には、母校・友達の協力で中学生から大学生の聴覚障がい者対象でアンケートを取り、リアルな声を基にしてイラストでまとめてみました。</p>
                 </tr>
                 <tr>
                     <td class="td-1">制作範囲</td>
@@ -75,7 +73,7 @@
                 </tr>
                 <tr>
                     <td class="td-1">使用言語</td>
-                    <td class="td-2">HTML/CSS/Javascript></td>
+                    <td class="td-2">HTML/CSS/Javascript</td>
                 </tr>
                 <tr>
                     <td class="td-1">サイト</td>
