--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
       <p>初めまして永山優美香です。<br>
             「デザイナーになりたい」という夢を諦めきれず、<br>
             再びデザイナーの道を目指すことにしました。<br>
-            デザインだけではなく、デジタルやWebにも<br>
+            デザインだけではなく、テクノロジーにも<br>
             興味があります。<br>
-            いつかはデザインやデジタル技術を通して、<br>
+            いつかはデザインやテクノロジーを通して、<br>
             国籍・年齢・障がいなどを問わず、<br>
             世の中の人々が便利でより良い<br>
             生活を送れるようにサポートするのが<br>
