--- a/mito.html
+++ b/mito.html
@@ -48,7 +48,7 @@
                 <tr>
                     <td class="design">デザイン</td>
                     <td class="td-2"><p>余白を意識して、シンプルですっきりとしたデザインにしました。
-                        TOPページに表示されている動画は、友達の協力で水戸の素材を集めCapcutというアプリで編集
+                        TOPページに表示されている動画は、友達の協力で水戸の素材を集めCatcupというアプリで編集しました。
                         一部の画像は水戸市観光の公式サイトでフリー素材として公開されており、その中から厳選しました。</p></td>
                 </tr>
                 <tr>
@@ -65,7 +65,7 @@
                 </tr>
                 <tr>
                     <td class="td-1">使用言語</td>
-                    <td class="td-2">HTML/CSS/Javascript></td>
+                    <td class="td-2">HTML/CSS/Javascript</td>
                 </tr>
                 <tr>
                     <td class="td-1">サイト</td>
