--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                     <td class="design">デザイン</td>
                     <td class="td-2"><p>ロゴマークは小さい頃大好きだったものと自分の名前を表現したデザインとなっています。
                         小さい頃は好奇心旺盛で活発な子でした。とにかく外遊びが大好きで、山に登ったり、海やプールで
-                        泳いだり、じいちゃんともか(愛犬)と一緒に森や田園で散歩したり、昆虫狩りや自然と触れ合ってきました。
+                        泳いだり、じいちゃんともか(愛犬)と一緒に森や田んぼで散歩したり、昆虫狩りや自然と触れ合ってきました。
                         そして、自分の苗字である「永山」。「永」は果てしなく永遠に続く海、「山」は文字通りの山を表しています。
                         ロゴマークのモチーフである海と山。子供のころ大好きだった場所と自分の苗字を重ねて、このデザインにしました。</p></td>
                 </tr>
