--- a/tokyo.html
+++ b/tokyo.html
@@ -43,13 +43,10 @@
             <table  class="table_content">
                 <tr>
                     <td class="movie">目的</td>
-                    <td class="td-2"><p>2年前にコロナ禍の中で茨城県から上京し、知らない環境で知り合いも一人もいなかったためとても不安
-                        でした。
+                    <td class="td-2"><p>2年前にコロナ禍の中で茨城県から上京し、知らない環境で知り合いが一人もいなかったためとても不安でした。
                         コロナの影響で行動制限され、人と簡単に会うこともできず孤独を感じたこともありました。
-                        行動制限が解除され東京の観光名所には、たくさんの外国人観光客が溢れていて当たり前だった日常に
-                        戻りかけていると実感しました。
-                        街中を歩くたびに、当たり前だった日常・何気ない日常の大切さに気付き、もう二度と来ない瞬間をカメラ
-                        に残しました。</p>
+                        行動制限が解除され東京の観光名所には、たくさんの外国人観光客が溢れていて当たり前だった日常に戻りかけていると実感しました。
+                        街中を歩くたびに、当たり前だった日常・何気ない日常の大切さに気付き、もう二度と来ない瞬間をカメラに残しました。</p>
                     </td>
                 </tr>
                 <tr>
@@ -58,7 +55,7 @@
                 </tr>
                 <tr>
                     <td class="td-1">使用ツール</td>
-                    <td class="td-2">Premiere Pro/一眼レフカメラ</td>
+                    <td class="td-2">Catcup/iPhon/一眼レフカメラ</td>
                 </tr>
             </table>
         </section>
